"Task 3 & Bonus Complete"

--- a/CrimeDataProject.ipynb
+++ b/CrimeDataProject.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,6 +441,120 @@
     "predicted_crime = map(predictive_crime, crime['Rape'])\n",
     "predicted_crime_list = list(predicted_crime)\n",
     "print(predicted_crime_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section - Bonus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the bonus, I will be importing the Altair module (along with Pandas) to generate a line graph for the data.  This will be incredibly useful for visualizing this dataset since it is year-based."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "  #altair-viz-0e2939b401dc44c0ac752efdd1d1d51c.vega-embed {\n",
+       "    width: 100%;\n",
+       "    display: flex;\n",
+       "  }\n",
+       "\n",
+       "  #altair-viz-0e2939b401dc44c0ac752efdd1d1d51c.vega-embed details,\n",
+       "  #altair-viz-0e2939b401dc44c0ac752efdd1d1d51c.vega-embed details summary {\n",
+       "    position: relative;\n",
+       "  }\n",
+       "</style>\n",
+       "<div id=\"altair-viz-0e2939b401dc44c0ac752efdd1d1d51c\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-0e2939b401dc44c0ac752efdd1d1d51c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0e2939b401dc44c0ac752efdd1d1d51c\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.14.1?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.14.1\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-305521ff09b17f28e2910810284b1ee5\"}, \"mark\": {\"type\": \"line\"}, \"encoding\": {\"tooltip\": [{\"field\": \"Year\", \"type\": \"quantitative\"}, {\"field\": \"Murder\", \"type\": \"quantitative\"}], \"x\": {\"axis\": {\"format\": \".0f\"}, \"field\": \"Year\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Murder\", \"type\": \"quantitative\"}}, \"params\": [{\"name\": \"param_2\", \"select\": {\"type\": \"interval\", \"encodings\": [\"x\", \"y\"]}, \"bind\": \"scales\"}], \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.14.1.json\", \"datasets\": {\"data-305521ff09b17f28e2910810284b1ee5\": [{\"Year\": 1965, \"Population\": 18073000, \"Murder\": 836, \"Rape\": 2320, \"Robbery\": 28182, \"Assault\": 27464, \"Burglary\": 183443, \"CarTheft\": 58452}, {\"Year\": 1966, \"Population\": 18258000, \"Murder\": 882, \"Rape\": 2439, \"Robbery\": 30098, \"Assault\": 29142, \"Burglary\": 196127, \"CarTheft\": 64368}, {\"Year\": 1967, \"Population\": 18336000, \"Murder\": 996, \"Rape\": 2665, \"Robbery\": 40202, \"Assault\": 31261, \"Burglary\": 219157, \"CarTheft\": 83775}, {\"Year\": 1968, \"Population\": 18113000, \"Murder\": 1185, \"Rape\": 2527, \"Robbery\": 59857, \"Assault\": 34946, \"Burglary\": 250918, \"CarTheft\": 104877}, {\"Year\": 1969, \"Population\": 18321000, \"Murder\": 1324, \"Rape\": 2902, \"Robbery\": 64754, \"Assault\": 36890, \"Burglary\": 248477, \"CarTheft\": 115400}, {\"Year\": 1970, \"Population\": 18190740, \"Murder\": 1444, \"Rape\": 2875, \"Robbery\": 81149, \"Assault\": 39145, \"Burglary\": 267474, \"CarTheft\": 125674}, {\"Year\": 1971, \"Population\": 18391000, \"Murder\": 1823, \"Rape\": 3225, \"Robbery\": 97682, \"Assault\": 42318, \"Burglary\": 273704, \"CarTheft\": 127658}, {\"Year\": 1972, \"Population\": 18366000, \"Murder\": 2026, \"Rape\": 4199, \"Robbery\": 86391, \"Assault\": 45926, \"Burglary\": 239886, \"CarTheft\": 105081}, {\"Year\": 1973, \"Population\": 18265000, \"Murder\": 2040, \"Rape\": 4852, \"Robbery\": 80795, \"Assault\": 47781, \"Burglary\": 246246, \"CarTheft\": 112328}, {\"Year\": 1974, \"Population\": 18111000, \"Murder\": 1919, \"Rape\": 5240, \"Robbery\": 86814, \"Assault\": 51454, \"Burglary\": 271824, \"CarTheft\": 104095}, {\"Year\": 1975, \"Population\": 18120000, \"Murder\": 1996, \"Rape\": 5099, \"Robbery\": 93499, \"Assault\": 54593, \"Burglary\": 301996, \"CarTheft\": 116274}, {\"Year\": 1976, \"Population\": 18084000, \"Murder\": 1969, \"Rape\": 4663, \"Robbery\": 95718, \"Assault\": 54638, \"Burglary\": 318919, \"CarTheft\": 133504}, {\"Year\": 1977, \"Population\": 17924000, \"Murder\": 1919, \"Rape\": 5272, \"Robbery\": 84703, \"Assault\": 57193, \"Burglary\": 309735, \"CarTheft\": 133669}, {\"Year\": 1978, \"Population\": 17748000, \"Murder\": 1820, \"Rape\": 5168, \"Robbery\": 83785, \"Assault\": 58484, \"Burglary\": 292956, \"CarTheft\": 119264}, {\"Year\": 1979, \"Population\": 17649000, \"Murder\": 2092, \"Rape\": 5394, \"Robbery\": 93471, \"Assault\": 60949, \"Burglary\": 308302, \"CarTheft\": 124343}, {\"Year\": 1980, \"Population\": 17506690, \"Murder\": 2228, \"Rape\": 5405, \"Robbery\": 112273, \"Assault\": 60329, \"Burglary\": 360925, \"CarTheft\": 133041}, {\"Year\": 1981, \"Population\": 17594000, \"Murder\": 2166, \"Rape\": 5479, \"Robbery\": 120344, \"Assault\": 60189, \"Burglary\": 350422, \"CarTheft\": 136849}, {\"Year\": 1982, \"Population\": 17659000, \"Murder\": 2013, \"Rape\": 5159, \"Robbery\": 107843, \"Assault\": 59818, \"Burglary\": 295245, \"CarTheft\": 137880}, {\"Year\": 1983, \"Population\": 17667000, \"Murder\": 1958, \"Rape\": 5296, \"Robbery\": 94783, \"Assault\": 59452, \"Burglary\": 249115, \"CarTheft\": 127861}, {\"Year\": 1984, \"Population\": 17735000, \"Murder\": 1786, \"Rape\": 5599, \"Robbery\": 89900, \"Assault\": 64872, \"Burglary\": 222956, \"CarTheft\": 115392}, {\"Year\": 1985, \"Population\": 17783000, \"Murder\": 1683, \"Rape\": 5706, \"Robbery\": 89706, \"Assault\": 68270, \"Burglary\": 219633, \"CarTheft\": 106537}, {\"Year\": 1986, \"Population\": 17772000, \"Murder\": 1907, \"Rape\": 5415, \"Robbery\": 91360, \"Assault\": 76528, \"Burglary\": 217010, \"CarTheft\": 113247}, {\"Year\": 1987, \"Population\": 17825000, \"Murder\": 2016, \"Rape\": 5537, \"Robbery\": 89721, \"Assault\": 82417, \"Burglary\": 216826, \"CarTheft\": 125329}, {\"Year\": 1988, \"Population\": 17898000, \"Murder\": 2244, \"Rape\": 5479, \"Robbery\": 97434, \"Assault\": 91239, \"Burglary\": 218060, \"CarTheft\": 153898}, {\"Year\": 1989, \"Population\": 17950000, \"Murder\": 2246, \"Rape\": 5242, \"Robbery\": 103983, \"Assault\": 91571, \"Burglary\": 211130, \"CarTheft\": 171007}, {\"Year\": 1990, \"Population\": 17990455, \"Murder\": 2605, \"Rape\": 5368, \"Robbery\": 112380, \"Assault\": 92105, \"Burglary\": 208813, \"CarTheft\": 187591}, {\"Year\": 1991, \"Population\": 18058000, \"Murder\": 2571, \"Rape\": 5085, \"Robbery\": 112342, \"Assault\": 90186, \"Burglary\": 204499, \"CarTheft\": 181287}, {\"Year\": 1992, \"Population\": 18119000, \"Murder\": 2397, \"Rape\": 5152, \"Robbery\": 108154, \"Assault\": 87608, \"Burglary\": 193548, \"CarTheft\": 168922}, {\"Year\": 1993, \"Population\": 18197000, \"Murder\": 2420, \"Rape\": 5008, \"Robbery\": 102122, \"Assault\": 85802, \"Burglary\": 181709, \"CarTheft\": 151949}, {\"Year\": 1994, \"Population\": 18169000, \"Murder\": 2016, \"Rape\": 4700, \"Robbery\": 86617, \"Assault\": 82100, \"Burglary\": 164650, \"CarTheft\": 128873}, {\"Year\": 1995, \"Population\": 18136000, \"Murder\": 1550, \"Rape\": 4290, \"Robbery\": 72492, \"Assault\": 74351, \"Burglary\": 146562, \"CarTheft\": 102596}, {\"Year\": 1996, \"Population\": 18185000, \"Murder\": 1353, \"Rape\": 4174, \"Robbery\": 61822, \"Assault\": 64857, \"Burglary\": 129828, \"CarTheft\": 89900}, {\"Year\": 1997, \"Population\": 18137000, \"Murder\": 1093, \"Rape\": 4075, \"Robbery\": 56094, \"Assault\": 63628, \"Burglary\": 118306, \"CarTheft\": 79697}, {\"Year\": 1998, \"Population\": 18175000, \"Murder\": 924, \"Rape\": 3843, \"Robbery\": 49125, \"Assault\": 62023, \"Burglary\": 104821, \"CarTheft\": 68171}, {\"Year\": 1999, \"Population\": 18196601, \"Murder\": 903, \"Rape\": 3563, \"Robbery\": 43821, \"Assault\": 58860, \"Burglary\": 93217, \"CarTheft\": 58261}, {\"Year\": 2000, \"Population\": 18976457, \"Murder\": 952, \"Rape\": 3530, \"Robbery\": 40539, \"Assault\": 60090, \"Burglary\": 87946, \"CarTheft\": 54231}, {\"Year\": 2001, \"Population\": 19084350, \"Murder\": 960, \"Rape\": 3546, \"Robbery\": 36555, \"Assault\": 56961, \"Burglary\": 80400, \"CarTheft\": 48287}, {\"Year\": 2002, \"Population\": 19134293, \"Murder\": 909, \"Rape\": 3885, \"Robbery\": 36653, \"Assault\": 53583, \"Burglary\": 76700, \"CarTheft\": 47366}, {\"Year\": 2003, \"Population\": 19212425, \"Murder\": 934, \"Rape\": 3775, \"Robbery\": 35790, \"Assault\": 48987, \"Burglary\": 75453, \"CarTheft\": 45204}, {\"Year\": 2004, \"Population\": 19280727, \"Murder\": 889, \"Rape\": 3608, \"Robbery\": 33506, \"Assault\": 46911, \"Burglary\": 70696, \"CarTheft\": 41002}, {\"Year\": 2005, \"Population\": 19315721, \"Murder\": 874, \"Rape\": 3636, \"Robbery\": 35179, \"Assault\": 46150, \"Burglary\": 68034, \"CarTheft\": 35736}, {\"Year\": 2006, \"Population\": 19306183, \"Murder\": 921, \"Rape\": 3169, \"Robbery\": 34489, \"Assault\": 45387, \"Burglary\": 68565, \"CarTheft\": 32134}, {\"Year\": 2007, \"Population\": 19297729, \"Murder\": 801, \"Rape\": 2926, \"Robbery\": 31094, \"Assault\": 45094, \"Burglary\": 64857, \"CarTheft\": 28030}, {\"Year\": 2008, \"Population\": 19467789, \"Murder\": 836, \"Rape\": 2799, \"Robbery\": 31789, \"Assault\": 42122, \"Burglary\": 65537, \"CarTheft\": 25096}, {\"Year\": 2009, \"Population\": 19541453, \"Murder\": 781, \"Rape\": 2582, \"Robbery\": 28141, \"Assault\": 43606, \"Burglary\": 62769, \"CarTheft\": 21871}, {\"Year\": 2010, \"Population\": 19395206, \"Murder\": 868, \"Rape\": 2797, \"Robbery\": 28630, \"Assault\": 44197, \"Burglary\": 65839, \"CarTheft\": 20639}, {\"Year\": 2011, \"Population\": 19465197, \"Murder\": 774, \"Rape\": 2752, \"Robbery\": 28396, \"Assault\": 45568, \"Burglary\": 65397, \"CarTheft\": 19311}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "import altair as alt\n",
+    "import pandas as pd\n",
+    "\n",
+    "crime_chart = alt.Chart(crime).mark_line().encode(\n",
+    "    x=alt.X('Year', axis=alt.Axis(format='.0f')),\n",
+    "    y='Murder',\n",
+    "    tooltip=['Year', 'Murder']\n",
+    ").interactive()\n",
+    "\n",
+    "crime_chart\n",
+    "\n",
+    "\n"
    ]
   }
  ],
